modified user.js swagger-output.json for api-doc
