# swagger-output.json
@@ -22,9 +22,66 @@
   "paths": {
     "/user/create": {
       "post": {
-        "description": "",
-        "parameters": [],
-        "responses": {}
+        "tags": [
+          "Users - 使用者"
+        ],
+        "description": "使用者註冊頁面 API",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "description": "資料格式",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "type": "string",
+                  "example": "Malenia5"
+                },
+                "email": {
+                  "type": "string",
+                  "example": "Malenia5@eldenring.io"
+                },
+                "password": {
+                  "type": "string",
+                  "example": "1passwordP!@"
+                },
+                "confirmPassword": {
+                  "type": "string",
+                  "example": "1passwordP!@"
+                }
+              },
+              "required": [
+                "name",
+                "email",
+                "password",
+                "confirmPassword"
+              ]
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "建立新使用者",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status": {
+                  "type": "boolean",
+                  "example": true
+                },
+                "message": {
+                  "type": "string",
+                  "example": "成功建立使用者帳號"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          }
+        }
       }
     },
     "/user/login": {
@@ -48,7 +105,7 @@
                 },
                 "password": {
                   "type": "string",
-                  "example": "password"
+                  "example": "1passwordP!@"
                 }
               },
               "required": [
@@ -102,11 +159,11 @@
               "properties": {
                 "password": {
                   "type": "string",
-                  "example": "password1"
+                  "example": "1passwordP!@"
                 },
                 "confirmPassword": {
                   "type": "string",
-                  "example": "password1"
+                  "example": "2passwordP!@"
                 }
               }
             }
@@ -203,7 +260,12 @@
               }
             }
           }
-        }
+        },
+        "security": [
+          {
+            "apiKeyAuth": []
+          }
+        ]
       },
       "patch": {
         "tags": [
@@ -260,7 +322,12 @@
               }
             }
           }
-        }
+        },
+        "security": [
+          {
+            "apiKeyAuth": []
+          }
+        ]
       }
     }
   }
